tests/key_mirror/key_mirror.exp
Error ------------------------------------------------------------------------------------------------------ test.js:9:2

Cannot cast `o.FOO` to string literal `BAR` because string literal `FOO` [1] is incompatible with string literal
`BAR` [2]. [incompatible-type]

   test.js:9:2
   9| (o.FOO : 'BAR'); // error, 'FOO' incompatible with 'BAR'
       ^^^^^

References:
   test.js:1:38
   1| declare function keyMirror<O>(o: O): $KeyMirror<O>;
                                           ^^^^^^^^^^^^^ [1]
   test.js:9:10
   9| (o.FOO : 'BAR'); // error, 'FOO' incompatible with 'BAR'
               ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:28:27

Cannot instantiate `$KeyMirror` because number literal `1` [1] is not a valid argument of `$KeyMirror` [2].
[incompatible-use]

   test.js:28:27
   28| declare var badKeyMirror: $KeyMirror<1>;
                                 ^^^^^^^^^^^^^ [2]

References:
   test.js:28:38
   28| declare var badKeyMirror: $KeyMirror<1>;
                                            ^ [1]



Found 2 errors
